--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lemon.hellowold">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.lemon.eventtest.TestTouchEventActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".orientationchange.OrientationChangeActivity"
+            android:configChanges="orientation|screenSize" />
+        <activity android:name="com.example.lemon.lifecyclertest.LifecycleTestActivity" />
+        <activity android:name="com.example.lemon.EmptyFragmentTest.TestFragmentActivity2" />
+        <activity android:name="com.example.lemon.EmptyFragmentTest.TestFragmentActivity$TestActivity" />
     </application>
 
 </manifest>
