--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     package="com.example.lemon.hellowold">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
+        android:name="com.example.lemon.app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,7 +27,16 @@
         <activity android:name="com.example.lemon.lifecyclertest.LifecycleTestActivity" />
         <activity android:name="com.example.lemon.EmptyFragmentTest.TestFragmentActivity2" />
         <activity android:name="com.example.lemon.EmptyFragmentTest.TestFragmentActivity$TestActivity" />
-        <activity android:name="com.example.lemon.shortmessage.ShortMessageList"></activity>
+        <activity android:name="com.example.lemon.shortmessage.ShortMessageListActivity"></activity>
+
+        <receiver
+            android:name="com.example.lemon.shortmessage.SmsBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
